--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 		<meta property="og:image"             content="https://kewlsage.github.io/peak.gif" />
 		<meta property="og:image:width"       content="500" />
 		<meta property="og:image:height"      content="500" />
+		
+		<meta name="twitter:player:stream"              content="https://kewlsage.github.io/peak.mp4" />
+		<meta name="twitter:player:stream:content_type" content="video/mp4">
 	</head>
 </html>
