--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta property="og:type"              content="video.other" />
-		<meta property="og:image"             content="https://kewlsage.github.io/peak.gif" />
+		<meta property="og:image"             content="https://gfycat.com/specificdarlingisabellinewheatear" />
 		<meta property="og:image:width"       content="500" />
 		<meta property="og:image:height"      content="500" />
 		
-		<meta name="twitter:player:stream"              content="https://kewlsage.github.io/peak.mp4" />
+		<meta name="twitter:player:stream"              content="https://gfycat.com/specificdarlingisabellinewheatear" />
 		<meta name="twitter:player:stream:content_type" content="video/mp4">
 	</head>
 </html>
