--- a/facts/index.html
+++ b/facts/index.html
@@ -3,6 +3,14 @@
 	<head>
 		<title>Random facts</title>
 		<style>
+			body {
+				width: 100%;
+				height: 100%;
+			}
+			p {
+				align-text: center;
+			}
+		</style>
 	</head>
 
 <body>
