--- a/facts/index.html
+++ b/facts/index.html
@@ -6,9 +6,11 @@
 			body {
 				width: 100%;
 				height: 100%;
+				background-color: black;
 			}
 			p {
 				align-text: center;
+				color: white;
 			}
 		</style>
 	</head>
