--- a/facts/index.html
+++ b/facts/index.html
@@ -9,7 +9,14 @@
 				background-color: black;
 			}
 			p {
-				align-text: center;
+            	font-size: 20px;
+            	position: fixed;
+				top: 50%;
+				left: 50%;
+				width: 100px;
+				height: 100px;
+				margin-top: -50px;
+				margin-left: -50px;
 				color: white;
 			}
 		</style>
@@ -18,5 +25,4 @@
 <body>
 	<p>you are cute</p>
 </body>
-
 </html>
